# OPENSEARCH_INTERMEDIATE_TUTORIAL

./: .gitignore  1. ABOUT_COURSE.md  2. HIGH_LEVEL_MODULES.md  3. INITIAL_MACHINE_PREP.md  3. TECHNICAL_GOTCHAS.md  3. initial_machine_prep.sh  ABOUT_COURSE.md  CATALOG_README.md  HIGH_LEVEL_MODULES.md  LICENSE  README.md  TECHNICAL_README.md  course_catalog_opensearch.jsonl  course_md_to_pdf_converter.py  course_promo.md  generate_course_catalog.py  generate_course_catalog_tags.py  helpers.py  initial_machine_prep.sh  pixi.toml  pyproject.toml  sample.env  setup_mermaid.sh  uv.toml  vscode-extensions.txt
1. INSTALLATION_CONFIGURATION/: 2. docker-compose-opensearch-single.yml  3. docker-compose-opensearch-cluster-nosecurity.yml  4. docker-compose-opensearch-cluster.yml  docker-compose-opensearch-single-nosecurity.yml  docker-compose-opensearch-single.yml  opensearch-cuda.dockerfile
2. TRADITIONAL_SEARCH/: 1. DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX.md  create-ingest-ecommerce.py  create-ingest-interns.py  create-ingest-my-index.py  create_ecommerce_original_edge_ngrams.py  text_search_explanations.md
2. TRADITIONAL_SEARCH/shell_commands/: 1. text_search_concepts.md  text_search.md  text_search.sh  text_search_explanations.md
3. INGEST_AND_SEARCH_CONCEPTS/: 1. DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX.md  docker-compose-opensearch-ml-cluster.yml  docker-compose-opensearch-single.yml
3. INGEST_AND_SEARCH_CONCEPTS/1. ingest_pipelines_processors/: 1. ingest_pipelines.py  1. ingest_pipelines.sh  2. ingest_processors_demo.ipynb  2. ingest_processors_full_demo.py  3. create-ingest-interns.py
3. INGEST_AND_SEARCH_CONCEPTS/2. search_pipelines_processors/: 1. search_pipelines.md  1. search_pipelines.py  1. search_pipelines.sh  (+1 more)
4. AI_SEARCH/: 1. DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX.md  docker-compose-fully-optimized.yml
5. AGENTIC_SEARCH/: 1. DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX.md  docker-compose-opensearch-ml-cluster.yml  docker-compose-opensearch-single-ollama-lite.yml  docker-compose-opensearch-single-ollama.yml  docker-compose-opensearch-single.yml  ollama-entrypoint.sh
6. REALTIME_PROJECTS/: 1. DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX.md
6. REALTIME_PROJECTS/1. search_as_you_type/: .env.example  .gitignore  ARCHITECTURE.md  FRONTEND_COMPARISON.md  NETWORK_CONFIG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REALTIME_SEARCH.md  examples.py  gradio_app.py  pyproject.toml  start.sh  stop.sh  streamlit_app.py
6. REALTIME_PROJECTS/1. search_as_you_type/backend/: __init__.py  config.py  main.py  models.py  opensearch_client.py
6. REALTIME_PROJECTS/1. search_as_you_type/logs/: .gitkeep
6. REALTIME_PROJECTS/1. search_as_you_type/opensearch_server/: 1. docker-compose-load-ecommerce.yml
6. REALTIME_PROJECTS/1. search_as_you_type/react-frontend/: .env.example
6. REALTIME_PROJECTS/3. geo_spatial/app/: PROJECT_SUMMARY.md  README.md  USER_GUIDE.md  app.py  config.py  data_loader.py  opensearch_client.py  pyproject.toml  run.sh  visualizations.py
6. REALTIME_PROJECTS/4. business_intelligence_agent/: WHAT_IS_RAG.md  docker-compose-SQL-server.yml  mssql_server_adventureworks.dockerfile  pyproject.toml
6. REALTIME_PROJECTS/4. business_intelligence_agent/1. non-RAG/: README.md  mssql_metadata.xlsx  text-to-sql-mssql.ipynb
6. REALTIME_PROJECTS/4. business_intelligence_agent/1. non-RAG/docs/: business-user-architecture.md  technical-architecture.md
6. REALTIME_PROJECTS/4. business_intelligence_agent/2. opensearch-MSSQL-RAG/: 1. build_ingest_meta_dictionary.ipynb  2. text-to-sql-viz-insights.ipynb  metadata_AdventureWorks2019.xlsx
6. REALTIME_PROJECTS/4. business_intelligence_agent/2. opensearch-MSSQL-RAG/docs/: text-to-sql-viz-insights.md
6. REALTIME_PROJECTS/4. business_intelligence_agent/3. opensearch-POSTGRES-RAG/: 1. build_ingest_meta_dictionary.ipynb  2. text-to-sql-viz-insights.ipynb  sample_env.env
6. REALTIME_PROJECTS/4. business_intelligence_agent/3. opensearch-POSTGRES-RAG/docs/: build_ingest_meta_dictionary.md
6. REALTIME_PROJECTS/4. business_intelligence_agent/non-RAG/: sample_env.env
6. REALTIME_PROJECTS/4. business_intelligence_agent/opensearch-POSTGRES-RAG/: CONVERSION_SUMMARY.md  README.md
6. REALTIME_PROJECTS/8. opensearch_mcp_server_app/: .env.example  MCP_SERVER_SETUP.md  README.md  app.py  config.py  mcp_client.py  mcp_server_config.yaml  pyproject.toml  start.sh  start_mcp_server.py
6. REALTIME_PROJECTS/8. opensearch_mcp_server_app/docs/: 1. README.md  BUSINESS_ARCHITECTURE.md  QUICKSTART.md  TECHNICAL_ARCHITECTURE.md  app_documentation.md  mcp_client_documentation.md  start_mcp_server_documentation.md
6. REALTIME_PROJECTS/8. opensearch_mcp_server_app/opensearch_server/: 1. docker-compose-load-ecommerce.yml  ecommerce_load_script.sh
6. REALTIME_PROJECTS/9. generic_ingest_search_app/backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
6. REALTIME_PROJECTS/9. generic_ingest_search_app/backend/app/core/: config.py
6. REALTIME_PROJECTS/9. generic_ingest_search_app/backend/app/models/: schemas.py
6. REALTIME_PROJECTS/9. generic_ingest_search_app/backend/app/routes/: auth.py  ingest.py  search.py
6. REALTIME_PROJECTS/9. generic_ingest_search_app/backend/app/services/: embedding_service.py  file_service.py  ingest_service.py  opensearch_service.py  search_service.py
7. BONUS_PROJECTS/: check_gpu_exists.py  pyproject.toml
7. BONUS_PROJECTS/1. chunking/: pyproject.toml
7. BONUS_PROJECTS/1. chunking/chonkie/: 1. chefs.ipynb  1. fetchers.ipynb  2. chunkers.ipynb
7. BONUS_PROJECTS/chonkie_docling_langxtract/: pyproject.toml
7. BONUS_PROJECTS/chonkie_docling_langxtract/1.chonkie/: 3. refinery.ipynb  4. porters.ipynb  5. pipelines.ipynb  6. chonkie_qdrant.ipynb
7. BONUS_PROJECTS/chonkie_docling_langxtract/2.docling/: 1. conversion.ipynb  1.conversion.ipynb  1.conversion.ipynb.backup  2.serialization_and_chunking.ipynb  3.information_extraction.ipynb  5.rag_with_opensearch.ipynb  docker-compose-milvus.yml  docker-compose-ollama.yml  earnings_statement_use_case.ipynb  ollama-entrypoint.sh
(+175 files in other folders)
