[project]
name = "ai_ml_search_with_opensearch_intermediate"
version = "0.1.0"
description = "Project dependencies for OpenSearch-related scripts and notebooks."
requires-python = "==3.12.11"
dependencies = [
    "opensearch-py==3.0.0",
    "opensearch-py[async]==3.0.0",
    "opensearch-py-ml==1.3.0",
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "ipython==9.5.0",
    "ipykernel==6.30.1",
    "jupyter==1.1.1",
    "ipywidgets==8.1.7",
    "treelib==1.7.0",
    "wordcloud==1.9.4",
    "deprecated==1.2.14",
    "sentence-transformers==5.1.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.37",
    "openai==1.107.3",
    "python-dotenv==1.0.1",
    "torch==2.8.0",
    "pyyaml==6.0.2",
    "accelerate==0.34.2",
    "onnx==1.16.0",
    "chardet==5.2.0",
    "weasyprint==61.2",
    "pydyf==0.8.0",
    "pdfkit==1.0.0",
    "Flask==3.0.3",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",
    "langchain==0.3.27",
    "chromadb==1.1.0",
    "langchain-openai==0.3.33",
    "langchain-chroma==0.2.6",
    "beautifulsoup4",
    "plotly==6.3.0",
    "mdutils==1.8.0",
    "anthropic==0.69.0",
    "Faker==37.11.0",
    "seaborn>=0.13.2",
    "jupyter-resource-usage==1.2.0",
    "huggingface-hub==0.34.4",
    "fastmcp==2.2.0",
    "asyncio==4.0.0",
    "opensearch-mcp-server-py==0.4.0",
    "langchain-mcp-adapters==0.1.12",
    "md2pdf==1.0.1",
    "cairosvg==2.8.2",
]
