[project]
name = "ai-ml-search-with-opensearch-intermediate"
version = "0.1.0"
description = "Intermediate OpenSearch tutorial: AI/ML search, RAG flows, and agentic search patterns with comprehensive examples and best practices."
readme = "1. ABOUT_COURSE.md"
requires-python = "==3.12.11"
license = {text = "MIT"}
authors = [
    {name = "OpenSearch Community", email = "info@opensearch.org"},
]
keywords = [
    "opensearch",
    "search",
    "ai",
    "machine-learning",
    "rag",
    "semantic-search",
    "vector-embeddings",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    # Core OpenSearch
    "opensearch-py==3.0.0",
    "opensearch-py[async]==3.0.0",
    "opensearch-py-ml==1.3.0",
    
    # Data Processing
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "chardet==5.2.0",
    
    # Jupyter & Interactive
    "ipython==9.5.0",
    "ipykernel==6.30.1",
    "jupyter==1.1.1",
    "ipywidgets==8.1.7",
    "jupyter-resource-usage==1.2.0",
    
    # Visualization & Utilities
    "treelib==1.7.0",
    "wordcloud==1.9.4",
    "plotly==6.3.0",
    "seaborn==0.13.2",
    
    # Machine Learning & Embeddings
    "torch==2.8.0",
    "sentence-transformers==5.1.2",
    "accelerate==0.34.2",
    "onnx==1.16.0",
    "huggingface-hub==0.34.4",
    
    # LLM & RAG
    "langchain==0.3.27",
    "langchain-openai==0.3.33",
    "langchain-chroma==0.2.6",
    "chromadb==1.1.0",
    "openai==1.107.3",
    "anthropic==0.69.0",
    
    # MCP (Model Context Protocol)
    "fastmcp==2.2.0",
    "opensearch-mcp-server-py==0.4.0",
    "langchain-mcp-adapters==0.1.12",
    
    # PDF & Documentation
    "weasyprint==61.2",
    "pydyf==0.8.0",
    "pdfkit==1.0.0",
    "md2pdf==1.0.1",
    "cairosvg==2.8.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.37",
    "mdutils==1.8.0",
    
    # Observability
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",
    "Flask==3.0.3",
    
    # Configuration & Utilities
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "deprecated==1.2.14",
    "beautifulsoup4==4.12.2",
    "Faker==37.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==6.1.0",
    "mypy==1.7.1",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.37",
]

[project.urls]
Homepage = "https://github.com/machzqcq/OPENSEARCH_INTERMEDIATE_TUTORIAL"
Documentation = "https://github.com/machzqcq/OPENSEARCH_INTERMEDIATE_TUTORIAL"
Repository = "https://github.com/machzqcq/OPENSEARCH_INTERMEDIATE_TUTORIAL.git"
Issues = "https://github.com/machzqcq/OPENSEARCH_INTERMEDIATE_TUTORIAL/issues"

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["opensearch_intermediate_tutorial"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
