[project]
name = "chonkie-docling-langextract"
version = "1.0.0"
description = "Understanding chonkie, docling and langextract libraries"
authors = [
    {name = "Pradeep Macharla", email = "pradeep@automationpractice.com"}
]
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "torch==2.9.0",
    "docling==2.67.0",
    "docling[vlm]==2.67.0",
    "hf-xet==1.2.0",
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8",
    "reportlab==4.4.7",
    "docling-surya==0.1.0",
    "easyocr==1.7.2",
    "pytesseract==0.3.13",
    "rich==14.2.0",
    "transformers==4.57.3",
    "pillow==10.4.0",
    "pydantic==2.12.5",
    "pip==25.3",
    "python-dotenv==1.2.1",
    "pymupdf==1.26.7",
    "matplotlib==3.10.8",
    "pdf2image==1.17.0",
    "llama-index==0.14.12",
    "llama-index-readers-file==0.5.6",
    "llama-index-readers-docling==0.4.2",
    "llama-index-readers-elasticsearch==0.4.1",
    "llama-index-node-parser-docling==0.4.2",
    "llama-index-vector-stores-opensearch==0.6.3",
    "llama-index-embeddings-huggingface==0.6.1",
    "llama-index-llms-ollama==0.9.1",
]

[[tool.uv.index]]
# Optional name for the index.
name = "torch"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "torch" }
