[project]
name = "text_to_bi_insights"
version = "0.1.0"
description = "Text to BI to Insights AI agentic app"
authors = [
    {name = "Pradeep", email = "pradeep@automationpractice.com"}
]
readme = "README.md"
requires-python = "==3.11.5"

dependencies = [
    "pandas==2.2.3",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "requests==2.32.4",
    "ipykernel==6.30.0",
    "openpyxl==3.1.5",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "ipywidgets==8.1.7",
    "duckdb==1.3.2",
    "streamlit==1.47.1",
    "gradio==5.38.2",
    "SQLAlchemy==2.0.42",
    "pymssql==2.3.8",
    "plotly==6.2.0",
    "nbformat==5.10.4",
    "jupyter-resource-usage==1.2.0",
    "opensearch-py==3.0.0",
    "opensearch-py[async]==3.0.0",
    "opensearch-py-ml==1.3.0",
    "scipy==1.16.3",
    "SQLAlchemy==2.0.42",
    "psycopg2-binary==2.9.11"
]
