[project]
name = "chonkie-docling-langextract"
version = "1.0.0"
description = "Understanding chonkie, docling and langextract libraries"
authors = [
    {name = "Pradeep Macharla", email = "pradeep@automationpractice.com"}
]
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "torch==2.9.0",
    "chonkie[all]==1.5.2",
    "docling==2.67.0",
    "docling[vlm]==2.67.0",
    "hf-xet==1.2.0",
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8",
    "qdrant-client==1.16.2",
    "reportlab==4.4.7",
    "docling-surya==0.1.0",
    "easyocr==1.7.2",
    "pytesseract==0.3.13",
    "rich==14.2.0",
    "transformers==4.57.3",
    "pillow==10.4.0",
    "pydantic==2.12.5",
    "pip==25.3",
    "haystack-ai==2.22.0",
    "docling-haystack==0.1.1",
    "milvus-haystack==0.0.18",
    "python-dotenv==1.2.1",
    "pymupdf==1.26.7",
    "matplotlib==3.10.8",
    "qdrant-haystack==10.0.0",
    "pdf2image==1.17.0",
]

[[tool.uv.index]]
# Optional name for the index.
name = "torch"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "torch" }
